# nn-from-scratch

./: CMakeLists.txt  README.md  main.cpp
src/: solver.cpp  solver.h
src/data/: batch.h  dataset.h  labeled_data_item.h
src/data/dataloader/: dataloader.cpp  dataloader.h
src/data/mnist_dataset/: mnist_dataset.cpp  mnist_dataset.h
src/network/: network.cpp  network.h
src/network/layers/: layer.h  leaky_relu.h  linear.h  relu.h  sigmoid.h
src/network/losses/: loss.h  mse.cpp  mse.h  softmax_cross_entropy.cpp  softmax_cross_entropy.h
src/network/optimizer/: adam.cpp  adam.h  optimizer.h  sgd.cpp  sgd.h
tests/: main_test.cpp
tests/data/: dataloader_test.cpp  dummy_dataset.h  labeled_data_item_test.cpp  mnist_dataset_test.cpp
tests/network/layers/: linear_test.cpp  network_test.cpp  relu_test.cpp  round.h  sigmoid_test.cpp  softmax_cross_entropy_test.cpp
